# UNIVA-rhwp

./: .gitignore  i18n-demo.html
deploy/: .env.example  .gitignore  README.md  build.sh  package.sh  run.sh
deploy/systemd/: rhwp-server.service
examples/: (안내)대구테크노파크_소상공인 AI공급기업 모집_ 안내문  (1).hwp  cfb_diff.rs  dump_baseline_controls.rs  dump_bf_raw.rs  dump_bodytext_first_record.rs  dump_bodytext_records.rs  dump_border_fills.rs  dump_cell_para_shapes.rs  dump_cell_paragraph_styles.rs  dump_cell_paragraphs.rs  dump_charshape0_bytes.rs  dump_col_def_bytes.rs  dump_cs.rs  dump_ctrl_headers.rs  dump_lineseg.rs  dump_margins.rs  dump_nested.rs  dump_nested_cell_text.rs  dump_nested_cell_text2.rs  dump_p0_charshapes.rs  dump_page_border_fill.rs  dump_para_border_fills.rs  dump_para_header_bytes.rs  dump_paragraph_linesegs.rs  dump_pink_cell_full.rs  dump_ps20.rs  dump_secd_full.rs  extract_link_doc.rs  file_header_dump.rs  hwp_to_hwpx.rs  inspect_hwp.rs  ir_diff_docinfo.rs  ir_diff_round_trip.rs  repair_hwp.rs  repair_hwp_d.rs  repair_hwp_e.rs  repair_modified.rs  repair_pink_cell.rs  repro_replace_runs_page_push.rs  roundtrip_dump_text.rs  (+4 more)
mydocs/feedback/: task_m600_30_visual_issues.md
mydocs/manual/: i18n_key_naming_convention.md  i18n_parent_integration_guide.md  i18n_translation_table.md  (+2 more)
rhwp-server/: Cargo.toml
rhwp-server/src/: events.rs  ir_compact.rs  main.rs  storage.rs  store.rs  ws.rs
rhwp-studio/: index.html  package-lock.json  package.json  vite.config.ts
samples/: TEST_목표양식.hwpx
scripts/: build-wasm.sh
server/: .env.local  Cargo.toml
server/src/: events.rs  ir_compact.rs  main.rs  storage.rs  store.rs  ws.rs
src/: main.rs  wasm_api.rs
tests/: hwpx_roundtrip_deep_diff.rs
(+243 files in other folders)
