[package]
name = "rhwp-server"
version = "0.1.0"
edition = "2021"
description = "rhwp SSR 세션 서버 — fileId 단위 문서 상태 영속 + 모델 조회 API"

[[bin]]
name = "rhwp-server"
path = "src/main.rs"

[dependencies]
# rhwp 엔진 (path 의존). native 빌드만 사용 — WASM 빌드와 분리.
rhwp = { path = ".." }

axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
# 외부 minio 저장소(upload/download) 호출용 — http만 사용(tls 불필요)
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
